--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
    - id: end-of-file-fixer
    - id: check-yaml
    - id: check-added-large-files
+   - id: requirements-txt-fixer
 -  repo: https://github.com/ambv/black
    rev: stable
    hooks:
