--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ opencv_contrib_python==4.5.4.60
 Pillow==8.4.0
 scikit_image==0.19.1
 scipy==1.7.3
-skimage==0.0
+scikit-image==0.19.1
 tensorboardX==2.4.1
 torch==1.10.1
 torchvision==0.11.2
